warsaw_local_date_time_excel_fmt added for tatry endpoints
