# doc/openapi.yaml
@@ -1,8 +1,7 @@
 openapi: 3.0.3
 info:
   title: Pogoda.cc
-  description: |-
-    Backend API specification for pogoda.cc system
+  description: Backend API specification for pogoda.cc system
   contact:
     email: sp8ebc@interia.pl
   license:
@@ -43,7 +42,7 @@ paths:
         - name: stationName
           in: path
           required: true
-          schema: 
+          schema:
             type: string
       responses:
         '200':
@@ -51,7 +50,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AvailableParametersModel'          
+                $ref: '#/components/schemas/AvailableParametersModel'
             application/xml:
               schema:
                 $ref: '#/components/schemas/AvailableParametersModel'
@@ -62,25 +61,24 @@ paths:
       tags:
         - station
       summary: Get measurements data for specified period
-      description: This endpoint returns all measurements done between two specified timestamps. 
-        Maximum time period is limited to 7 days at once!!
+      description: This endpoint returns all measurements done between two specified timestamps. Maximum time period is limited to 7 days at once!!
       parameters:
         - name: stationName
           in: path
           required: true
-          schema: 
+          schema:
             type: string
         - name: from
           in: query
           required: true
-          description: "Timestamp in UNIX epoch format (UTC)"
+          description: Timestamp in UNIX epoch format (UTC)
           schema:
             type: integer
             format: int64
         - name: to
           in: query
           required: true
-          description: "Timestamp in UNIX epoch format (UTC)"
+          description: Timestamp in UNIX epoch format (UTC)
           schema:
             type: integer
             format: int64
@@ -92,7 +90,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/StationDataModel'          
+                  $ref: '#/components/schemas/StationDataModel'
             application/xml:
               schema:
                 type: array
@@ -110,11 +108,11 @@ paths:
         - name: stationName
           in: path
           required: true
-          schema: 
+          schema:
             type: string
         - name: ascendingOrder
           in: query
-          description: "Set to true to change sorting order to older-first"
+          description: Set to true to change sorting order to older-first
           required: true
           schema:
             type: integer
@@ -122,7 +120,7 @@ paths:
         - name: isLong
           in: query
           required: true
-          description: "Set to true to get last 2000 records instead of 50"
+          description: Set to true to get last 2000 records instead of 50
           schema:
             type: integer
             format: int64
@@ -134,7 +132,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/StationDataModel'          
+                  $ref: '#/components/schemas/StationDataModel'
             application/xml:
               schema:
                 type: array
@@ -152,7 +150,7 @@ paths:
         - name: stationName
           in: path
           required: true
-          schema: 
+          schema:
             type: string
       responses:
         '200':
@@ -160,7 +158,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Summary'          
+                $ref: '#/components/schemas/Summary'
             application/xml:
               schema:
                 $ref: '#/components/schemas/Summary'
@@ -176,7 +174,7 @@ paths:
         - name: stationName
           in: path
           required: true
-          schema: 
+          schema:
             type: string
       responses:
         '200':
@@ -184,7 +182,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Trend'          
+                $ref: '#/components/schemas/Trend'
             application/xml:
               schema:
                 $ref: '#/components/schemas/Trend'
@@ -200,7 +198,7 @@ paths:
         - name: stationName
           in: path
           required: true
-          schema: 
+          schema:
             type: string
       responses:
         '200':
@@ -208,7 +206,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/StationCurrentLocalTime'          
+                $ref: '#/components/schemas/StationCurrentLocalTime'
             application/xml:
               schema:
                 $ref: '#/components/schemas/StationCurrentLocalTime'
@@ -225,7 +223,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ListOfAllStations'          
+                $ref: '#/components/schemas/ListOfAllStations'
             application/xml:
               schema:
                 $ref: '#/components/schemas/ListOfAllStations'
@@ -233,7 +231,7 @@ paths:
     get:
       tags:
         - meteo system
-      summary: 'Returns a list of all station groups defined in the system'
+      summary: Returns a list of all station groups defined in the system
       description: ''
       responses:
         '200':
@@ -243,7 +241,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/StationsGroup'          
+                  $ref: '#/components/schemas/StationsGroup'
             application/xml:
               schema:
                 type: array
@@ -253,13 +251,13 @@ paths:
     get:
       tags:
         - meteo system
-      summary: 'Returns all stations associated with given group'
+      summary: Returns all stations associated with given group
       description: ''
       parameters:
         - name: id
           in: path
           required: true
-          schema: 
+          schema:
             type: integer
             format: int32
       responses:
@@ -270,7 +268,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/StationGroupStations'          
+                  $ref: '#/components/schemas/StationGroupStations'
             application/xml:
               schema:
                 type: array
@@ -280,46 +278,46 @@ paths:
     get:
       tags:
         - mrozowiska
-      summary: "Returns last 5000 measurements for given station"
+      summary: Returns last 5000 measurements for given station
       parameters:
         - name: station
           in: path
           required: true
-          description: "Station name: litworowy, mulowy etc."
+          description: 'Station name: litworowy, mulowy etc.'
           schema:
             type: string
       responses:
         '200':
           description: successful operation
           content:
-             application/json:
+            application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/TatryData'        
+                  $ref: '#/components/schemas/TatryData'
   /tatry/{station}/last:
     get:
       tags:
         - mrozowiska
-      summary: "Returns newest measurement for given station"
+      summary: Returns newest measurement for given station
       parameters:
         - name: station
           in: path
           required: true
-          description: "Station name: litworowy, mulowy etc."
+          description: 'Station name: litworowy, mulowy etc.'
           schema:
             type: string
       responses:
         '200':
           description: successful operation
           content:
-             application/json:
+            application/json:
               schema:
-                $ref: '#/components/schemas/TatryData'  
+                $ref: '#/components/schemas/TatryData'
 components:
   schemas:
     TatryData:
-      description: "View specific to custom weather station installed to measure extremely low temperatures in Tatra"
+      description: View specific to custom weather station installed to measure extremely low temperatures in Tatra
       properties:
         id:
           type: integer
@@ -327,57 +325,61 @@ components:
         epoch:
           type: integer
           format: int64
-          description: "Timestamp when this data record has been received from station"
+          description: Timestamp when this data record has been received from station
           example: 1672859594
+        warsaw_local_date_time_excel_fmt:
+          type: string
+          description: Epoch timestamp converted to local time for Warsaw and then printed in MS Excel compatible
+          example: 01-02-23 21:31
         station:
           type: string
-          description: "Station name, the what was put into HTTP query"
-          example: "litworowy"
+          description: Station name, the what was put into HTTP query
+          example: litworowy
         temperature_from_wx_fame:
           type: number
           format: float
-          description: "Temperature in degrees celsius, recalculated by the controller and sent using APRS weather packets fomat, with 1 degrees F resolution"
+          description: Temperature in degrees celsius, recalculated by the controller and sent using APRS weather packets fomat, with 1 degrees F resolution
           example: 7.22222
         raw_measurement_from_telemetry_frame:
           type: integer
           format: int32
-          description: "Raw measurements from PT sensor amplifier (MAX31865) in range from 0x0000 to 0xFFFF"
+          description: Raw measurements from PT sensor amplifier (MAX31865) in range from 0x0000 to 0xFFFF
           example: 7186
         calculated_measurement_from_telemetry_frame:
           type: number
           format: float
-          description: "Raw measurement recalculated by the backend to degrees celsius"
+          description: Raw measurement recalculated by the backend to degrees celsius
           example: 7.86596
         voltage:
           type: number
           format: float
-          description: "Battery voltage in Volts"
+          description: Battery voltage in Volts
           example: 12.58
         max31865_status:
           type: integer
           format: int32
-          description: "Content of error status register from MAX31865 amplifier. For more information please refer to datasheet"
+          description: Content of error status register from MAX31865 amplifier. For more information please refer to datasheet
         lse_rdy:
           type: boolean
-          description: "Station controller status: Set to true if Low Speed External Oscillator is running"
+          description: 'Station controller status: Set to true if Low Speed External Oscillator is running'
         rtc_en:
           type: boolean
-          description: "Station controller status: Set to true if Real Time Clock works properly"
+          description: 'Station controller status: Set to true if Real Time Clock works properly'
         max31865_init_ok:
           type: boolean
-          description: "Station controller status: If MAX31865 has been properly initialized after wakeup or powerup"
+          description: 'Station controller status: If MAX31865 has been properly initialized after wakeup or powerup'
         sleep:
           type: boolean
-          description: "Station controller status: If controller went to deep sleep between transmission of two consecutive weather frames"
+          description: 'Station controller status: If controller went to deep sleep between transmission of two consecutive weather frames'
         spi_comm_error:
           type: boolean
-          description: "Station controller status: If there were at least one SPI bus communication problem between transmission of two consecutive weather frames"
+          description: 'Station controller status: If there were at least one SPI bus communication problem between transmission of two consecutive weather frames'
           example: false
         spi_comm_ok:
           type: boolean
-          description: "Station controller status: If there were at least one succesfull SPI bus communication problem between transmission of two consecutive weather frames"
+          description: 'Station controller status: If there were at least one succesfull SPI bus communication problem between transmission of two consecutive weather frames'
     AvailableParametersModel:
-      description: "desc"
+      description: desc
       properties:
         hasWind:
           type: boolean
@@ -391,7 +393,7 @@ components:
           type: integer
           format: int8
     StationDefinitionModel:
-      description: "dupa"
+      description: dupa
       type: object
       properties:
         id:
@@ -399,30 +401,30 @@ components:
           format: int32
           example: 1
         name:
-          description: "description123"
+          description: description123
           type: string
-          example: "skrzyczne"
+          example: skrzyczne
         enabled:
           type: boolean
           example: true
         callsign:
           type: string
-          example: "SR9NSK"
+          example: SR9NSK
         ssid:
           type: integer
           format: int8
         displayedName:
           type: string
-          example: "Skrzyczne"
+          example: Skrzyczne
         displayedLocation:
           type: string
-          example: "Góra Skrzyczne, Beskid Śląski"
+          example: Góra Skrzyczne, Beskid Śląski
         sponsorUrl:
           type: string
-          example: "http://skrzyczne.pl"
+          example: http://skrzyczne.pl
         backgroundJpg:
           type: string
-          example: ""
+          example: ''
         backgroundJpgAlign:
           type: integer
           format: int32
@@ -451,7 +453,7 @@ components:
       items:
         $ref: '#/components/schemas/StationDefinitionModel'
     LocaleEntry:
-      description: "LocaleEntry"
+      description: LocaleEntry
       type: object
       properties:
         id:
@@ -472,7 +474,7 @@ components:
         year:
           type: integer
           format: int32
-        month: 
+        month:
           type: integer
           format: int32
         day:
@@ -614,7 +616,7 @@ components:
           type: integer
           format: int32
         epoch:
-          description: "UTC timestamp in UNIX epoch when this measurement was taken"
+          description: UTC timestamp in UNIX epoch when this measurement was taken
           type: integer
           format: int64
         station:
